--- a/src/Pages/Home/Body/body.module.css
+++ b/src/Pages/Home/Body/body.module.css
@@ -9,7 +9,7 @@
     width: 50%;
     z-index: -10;
     position: relative;
-    bottom: 130px;
+    bottom: 250px;
 
 }
 
@@ -17,7 +17,7 @@
 
     width: 50%;
     position: relative;
-    bottom: 130px;
+    bottom: 250px;
     z-index: -10;
 
 }
@@ -29,7 +29,7 @@
     background-color: gray;
     height: 650px;
     position: relative;
-    bottom: 120px;
+    bottom: 250px;
 }
 
 .display {
@@ -197,22 +197,26 @@
     background-color: #DE5A27;
     z-index: -10;
 }
-.aboutimg{
+
+.aboutimg {
 
     padding-top: 350px;
     padding-left: 30px;
 }
-.aboutflex{
+
+.aboutflex {
 
     display: flex;
 }
-.aboutpara{
+
+.aboutpara {
 
     padding-top: 390px;
     font-size: 50px;
     padding-left: 30px;
 }
-.button1{
+
+.button1 {
 
     position: relative;
     left: 630px;
@@ -222,7 +226,7 @@
     border-radius: 20px;
 }
 
-.button2{
+.button2 {
 
     position: relative;
     left: 680px;
@@ -232,93 +236,100 @@
     border-radius: 20px;
 
 }
-.expertsection{
+
+.expertsection {
 
     padding-left: 30px;
     font-size: 30px;
     color: #DE5A27;
     font-weight: bold;
 }
-.servicesmain{
+
+.servicesmain {
 
     display: flex;
     justify-content: space-evenly;
     padding-top: 100px;
 }
-.service1{
+
+.service1 {
 
     border-radius: 10px;
     width: 10%;
-      height: 100px;
+    height: 100px;
     background-color: #DE5A27;
-    
-    
+
+
 }
 
-.service2{
+.service2 {
 
     border-radius: 10px;
 
     width: 10%;
     height: 100px;
     background-color: #DE5A27;
-    
+
 }
 
-.service3{
+.service3 {
 
     border-radius: 10px;
 
     width: 10%;
     height: 100px;
     background-color: #DE5A27;
-    
+
 }
-.webdesigning{
+
+.webdesigning {
 
     font-size: 100px;
     padding-left: 15px;
     color: #F0F2F4;
-    
+
 }
 
-.webdevelopment{
-
-    font-size: 100px;
-    padding-left: 15px;
-    color: #F0F2F4;
-}
-
-.graphicdesigning{
+.webdevelopment {
 
     font-size: 100px;
     padding-left: 15px;
     color: #F0F2F4;
 }
-.experthead{
+
+.graphicdesigning {
+
+    font-size: 100px;
+    padding-left: 15px;
+    color: #F0F2F4;
+}
+
+.experthead {
 
     text-align: center;
     font-weight: bold;
 }
 
-.experthead2{
+.experthead2 {
 
     text-align: center;
     font-weight: bold;
 }
 
-.experthead3{
+.experthead3 {
 
     text-align: center;
     font-weight: bold;
 }
-.projecthead{
+
+.projecthead {
 
     padding-top: 100px;
 }
-.projectsection{
 
-    
+.projectsection {
+
+
     position: relative;
     top: 120px;
     width: 99%;
@@ -326,7 +337,8 @@
     z-index: -10;
     background-color: #F0F2F4;
 }
-.projecthead{
+
+.projecthead {
 
     margin: 10px;
     padding: 19px;
@@ -335,13 +347,14 @@
     color: #DE5A27;
 }
 
-.projectpara{
+.projectpara {
     padding-left: 27px;
     font-size: 20px;
 
-    
+
 }
-.projectcartmain{
+
+.projectcartmain {
 
     display: flex;
     position: relative;
@@ -349,90 +362,15 @@
     justify-content: space-around;
 }
 
-.projectcartmain2{
+.projectcartmain2 {
 
     display: flex;
     position: relative;
     bottom: 150px;
     justify-content: space-around;
 }
-.projectcart1{
 
-    border: 1px solid white;
-    background-color: white;
-    width: 25%;
-    position: relative;
-    bottom: 380px;
-    height: 300px;
-}
-.projectcart1:hover{
-
-    background-color: #E86129;
-}
-
-.projectcart2:hover{
-
-    background-color: #E86129;
-}
-
-.projectcart3:hover{
-
-    background-color: #E86129;
-}
-
-.projectcart4:hover{
-
-    background-color: #E86129;
-}
-.projectcart5:hover{
-
-    background-color: #E86129;
-}
-.project1img{
-
-    width: 30%;
-     padding-left: 120px;
-     padding-top: 7px;
-}
-
-.project2img{
-
-    width: 30%;
-     padding-left: 120px;
-     padding-top: 7px;
-}
-
-.project3img{
-
-    width: 30%;
-     padding-left: 120px;
-     padding-top: 7px;
-}
-
-.project4img{
-
-    width: 30%;
-     padding-left: 120px;
-     padding-top: 7px;
-}
-
-.project5img{
-
-    width: 30%;
-     padding-left: 120px;
-     padding-top: 7px;
-}
-.projectcart2{
-
-    border: 1px solid white;
-    width: 25%;
-    background-color: white;
-    position: relative;
-    bottom: 380px;
-    height: 300px;
-}
-
-.projectcart3{
+.projectcart1 {
 
     border: 1px solid white;
     background-color: white;
@@ -442,8 +380,93 @@
     height: 300px;
 }
 
+.projectcart3 {
 
-.projectcart4{
+    display: none;
+}
+
+.projectcart1:hover {
+
+    background-color: #E86129;
+}
+
+.projectcart2:hover {
+
+    background-color: #E86129;
+}
+
+.projectcart3:hover {
+
+    background-color: #E86129;
+}
+
+.projectcart4:hover {
+
+    background-color: #E86129;
+}
+
+.projectcart5:hover {
+
+    background-color: #E86129;
+}
+
+.project1img {
+
+    width: 30%;
+    padding-left: 120px;
+    padding-top: 7px;
+}
+
+.project2img {
+
+    width: 30%;
+    padding-left: 120px;
+    padding-top: 7px;
+}
+
+.project3img {
+
+    width: 30%;
+    padding-left: 120px;
+    padding-top: 7px;
+}
+
+.project4img {
+
+    width: 30%;
+    padding-left: 120px;
+    padding-top: 7px;
+}
+
+.project5img {
+
+    width: 30%;
+    padding-left: 120px;
+    padding-top: 7px;
+}
+
+.projectcart2 {
+
+    border: 1px solid white;
+    width: 25%;
+    background-color: white;
+    position: relative;
+    bottom: 380px;
+    height: 300px;
+}
+
+.projectcart3 {
+
+    border: 1px solid white;
+    background-color: white;
+    width: 25%;
+    position: relative;
+    bottom: 380px;
+    height: 300px;
+}
+
+
+.projectcart4 {
 
     border: 1px solid white;
     background-color: white;
@@ -454,7 +477,7 @@
     height: 300px;
 }
 
-.projectcart5{
+.projectcart5 {
 
     border: 1px solid white;
     background-color: white;
@@ -463,44 +486,47 @@
     bottom: 380px;
     height: 300px;
 }
-.projectcarthead{
+
+.projectcarthead {
     text-align: center;
     font-size: 30px;
     font-weight: bold;
 }
 
-.projectcarthead2{
+.projectcarthead2 {
     text-align: center;
     font-size: 30px;
     font-weight: bold;
 }
 
-.projectcartpara{
+.projectcartpara {
     text-align: center;
     font-size: 15px;
     padding-top: 40px;
 
 }
-.projectcarthead3{
+
+.projectcarthead3 {
     text-align: center;
     font-size: 30px;
     font-weight: bold;
 }
 
 
-.projectcarthead4{
+.projectcarthead4 {
     text-align: center;
     font-size: 30px;
     font-weight: bold;
 }
 
 
-.projectcarthead5{
+.projectcarthead5 {
     text-align: center;
     font-size: 30px;
     font-weight: bold;
 }
-.projectbutton1{
+
+.projectbutton1 {
 
     display: flex;
     position: relative;
@@ -510,21 +536,181 @@
     height: 30px;
     padding: 7px;
     border: 1px solid blue;
-    
+
 }
-.arrow{
+
+.arrow {
 
     padding-left: 40px;
 }
+.benifitssection{
+
+    position: relative;
+    bottom: 430px;
+    width: 40%;
+    left: 100px;
+    padding: 15px;
+    font-weight: bold;
+    font-size: 40px;
+    color: #DE5A27;
+}
+.benifithead{
+
+    font-size: 40px;
+    color: #1A1F33;
+    padding-top: 10px;
+    padding: 15px;
+}
+.expertflex{
+
+    display: flex;
+}
+.expert1{
+    
+    padding-left: 60px;
+    padding-top:  20px; 
+    font-size: 60px;
+}
+.expert1main{
+    position: relative;
+    bottom: 430px;
+    left: 80px;
+    
+}
+.expertpara{
+    font-size: 15px;
+    font-weight: bold;
+    padding-top: 30px;
+    padding: 15px;
+    padding-left: 40px;
+}
+/* .expertsubmain{
+
+    display: flex;
+} */
+.threeimg{
+    position: relative;
+    bottom: 800px;
+    left: 450px;
+    width: 30%;
+    border-radius: 30px;
+
+}
+.threeimg2{
+    position: relative;
+    bottom: 1100px;
+    left: 460px;
+    width: 30%;
+    border-radius: 30px;
+
+}
+
+
+.threeimg3{
+    position: relative;
+    bottom: 700px;
+    left: 60px;
+    width: 30%;
+    border-radius: 30px;
+
+}
+.finalpara{
+
+    font-size: 20px;
+    position: relative;
+    bottom: 1030px;
+    padding-left: 80px;
+    color: #808080;
+    
+}
+.feedbacksectionhead{
+
+    text-align: center;
+    position: relative;
+    bottom: 850px;
+    font-size: 30px;
+    font-weight: bold;
+    color: #DE5A27;
+
+}
+.feedbacksubpara{
+    font-size: 20px;
+    padding-top: 30px;
+    font-weight: bold;
+    color: #808080;
+
+}
+.animationdiv{
+
+    border: 1px solid black;
+    height: 600px;
+    position: relative;
+    bottom: 800px;
+}
+.oliveimg{
+
+    width: 30%;
+    position: relative;
+    top: 20px;
+    left: 420px;
+
+}
+
+
+.leoimg{
+
+    width: 30%;
+    position: relative;
+    left: 420px;
+    top: 20px;
+
+}
+
+.johnimg{
+
+    width: 20%;
+    position: relative;
+    left: 450px;
+    top: 20px;
+
+    bottom: 50px;
+}
+.swiper {
+    width: 100%;
+    height: 100%;
+  }
+  
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+  }
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }  
 @media only screen and (max-width:1024px) {
     .displayimage {
 
         width: 40%;
+        position: relative;
+        bottom: 220px;
     }
 
     .displayimage2 {
 
         width: 60%;
+        position: relative;
+        bottom: 220px;
+
+    }
+
+    .greymenu {
+
+        position: relative;
+        bottom: 220px;
     }
 
     .cart1 {
@@ -561,25 +747,119 @@
     .cartpara3 {
         padding-right: 10px;
     }
-    .aboutpara{
+
+    .aboutpara {
         font-size: 40px;
     }
-    .aboutimg{
+
+    .aboutimg {
 
         width: 40%;
     }
-    .button1{
+
+    .button1 {
 
         width: 10%;
         position: relative;
         right: 200px;
     }
 
-    .button2{
+    .button2 {
 
         width: 10%;
         position: relative;
         right: 100px;
+    }
+
+    .webdesigning {
+
+        font-size: 100px;
+        padding-left: 50px;
+    }
+
+    .service1 {
+
+        width: 20%;
+    }
+
+
+    .webdevelopment {
+
+        font-size: 100px;
+        padding-left: 50px;
+    }
+
+    .service2 {
+
+        width: 20%;
+    }
+
+
+    .graphicdesigning {
+
+        font-size: 100px;
+        padding-left: 50px;
+    }
+
+    .service3 {
+
+        width: 20%;
+    }
+
+    .project1img {
+
+        padding-left: 145px;
+    }
+
+    .projectcartpara {
+
+        position: relative;
+        bottom: 20px;
+    }
+
+    .projectbutton1 {
+
+        width: 60%;
+    }
+
+    .project2img {
+
+        padding-left: 145px;
+
+    }
+
+
+
+    .project4img {
+
+        padding-left: 145px;
+
+    }
+
+    .project5img {
+
+        padding-left: 145px;
+
+    }
+
+    .projectcart1 {
+
+        width: 40%;
+    }
+
+    .projectcart2 {
+
+        width: 40%;
+    }
+
+    .projectcart4 {
+
+        width: 40%;
+    }
+
+    .projectcart5 {
+
+        width: 40%;
     }
 }
 
@@ -592,8 +872,10 @@
 
     .greymenu {
 
-        height: 100px;
+        height: 170px;
         width: 100%;
+        position: relative;
+        bottom: 300px;
         z-index: -5;
     }
 
@@ -630,6 +912,95 @@
         width: 40%;
         font-size: 14px;
     }
+
+    .aboutflex {
+
+        display: flex;
+        flex-direction: column;
+    }
+
+    .aboutpara {
+
+        position: relative;
+        bottom: 350px;
+    }
+
+    .aboutimg {
+
+        padding-left: 150px;
+        width: 50%;
+    }
+
+    .webdesigning {
+        position: relative;
+        right: 20px;
+    }
+
+    .webdevelopment {
+        position: relative;
+        right: 20px;
+    }
+
+    .graphicdesigning {
+        position: relative;
+        right: 20px;
+    }
+
+    .project1img {
+
+        position: relative;
+        right: 40px;
+    }
+
+    .project2img {
+
+        width: 30%;
+        position: relative;
+        right: 40px;
+    }
+
+
+
+    .project4img {
+        position: relative;
+        right: 40px;
+    }
+
+    .project5img {
+
+        position: relative;
+        right: 40px;
+    }
+
+    .projectcart1 {
+
+        width: 40%;
+    }
+
+    .projectcart2 {
+        width: 40%;
+
+
+    }
+
+    .projectcart4 {
+
+        width: 40%;
+    }
+
+    .projectcart5 {
+        width: 40%;
+
+
+    }
+
+    /* .projectbutton1{
+
+        width: 100%;
+        position: relative;
+        right: 100px;
+    } */
+
 }
 
 @media only screen and (max-width:425px) {
@@ -637,7 +1008,7 @@
 
         display: flex;
         flex-direction: column;
-        
+
 
     }
 
@@ -661,16 +1032,153 @@
         font-size: 18px;
 
     }
-    .what{
+
+    .what {
         font-size: 20px;
     }
-    .whatpara{
+
+    .whatpara {
 
         font-size: 15px;
- 
+
     }
 
+    .orangecolor {
+
+        padding-top: 600px;
+    }
+
+    .aboutimg {
+
+        position: relative;
+        right: 60px;
+    }
+
+    .aboutpara {
+
+        font-size: 40px;
+    }
+
+    .servicesmain {
+
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+
+    }
+
+    .service1 {
+
+        width: 50%;
+        position: relative;
+        bottom: 80px;
+    }
+
+    .service2 {
+
+        width: 50%;
+        position: relative;
+        bottom: 40px;
+    }
+
+    .service3 {
+
+        width: 50%;
+    }
+
+    .webdesigning {
+
+        padding-left: 65px;
+    }
+
+    .webdevelopment {
+
+        padding-left: 65px;
+    }
+
+    .graphicdesigning {
+
+        padding-left: 65px;
+    }
+
+    .projectcartmain {
+
+        display: flex;
+        flex-direction: column;
+
+    }
+
+    .projectcartmain2 {
+
+        display: flex;
+        flex-direction: column;
+    }
+
+    .projectcart1 {
+
+        width: 100%;
+    }
+
+    .projectcart2 {
+
+        width: 100%;
+    }
+
+    .projectcart3 {
+
+        width: 100%;
+    }
+
+    .projectcart4 {
+
+        width: 100%;
+    }
+
+    .projectcart5 {
+
+        width: 100%;
+    }
+
+    .project1img {
+        padding-left: 185px;
+    }
+
+    .project2img {
+        padding-left: 185px;
+
+    }
+
+    /* .project3img {
+        padding-left: 125px;
+
+    } */
+
+    .project4img {
+        padding-left: 185px;
+
+    }
+
+    .project5img {
+        padding-left: 185px;
+
+    }
+
+    .projectbutton1 {
+
+        width: 40%;
+    }
+
+    .projectpara {
+
+        text-align: center;
+    }
+
+    .projecthead {
+
+        text-align: center;
+    }
 }
+
 @media only screen and (max-width:375px) {
     .cart1 {
 
@@ -691,5 +1199,29 @@
         width: 88%;
         font-size: 18px;
 
+    }
+
+    .project1img {
+
+        position: relative;
+        right: 60px;
+    }
+
+    .project2img {
+
+        position: relative;
+        right: 60px;
+    }
+
+    .project4img {
+
+        position: relative;
+        right: 60px;
+    }
+
+    .project5img {
+
+        position: relative;
+        right: 60px;
     }
 }
