--- a/src/Pages/Home/Body/body.module.css
+++ b/src/Pages/Home/Body/body.module.css
@@ -644,6 +644,8 @@
 
     border: 1px solid black;
     height: 600px;
+    width: 99%;
+    cursor: pointer;
     position: relative;
     bottom: 800px;
 }
@@ -652,10 +654,27 @@
     width: 30%;
     position: relative;
     top: 20px;
+    cursor: pointer;
     left: 420px;
+    border-radius: 50px;
 
 }
+.olivename{
 
+    text-align: center;
+    padding-right: 70px;
+    font-weight: bold;
+    padding-bottom: 30px;
+    font-size: 30px;
+    color: black;
+}
+.olivepara{
+
+    padding-top: 70px;
+    padding: 30px;
+    color: #808080;
+    font-size: 20px;
+}
 
 .leoimg{
 
@@ -663,7 +682,26 @@
     position: relative;
     left: 420px;
     top: 20px;
+    border-radius: 50px;
+    cursor:pointer;
 
+
+}
+.leoname{
+
+    text-align: center;
+    padding-right: 70px;
+    font-weight: bold;
+    padding-bottom: 30px;
+    font-size: 30px;
+    color: black;
+}
+.leopara{
+
+    padding-top: 50px;
+    padding: 30px;
+    color: #808080;
+    font-size: 20px;
 }
 
 .johnimg{
@@ -671,13 +709,32 @@
     width: 20%;
     position: relative;
     left: 450px;
-    top: 20px;
-
-    bottom: 50px;
+    cursor: pointer;
+    bottom: 10px;
 }
+.johnpara{
+
+        padding-top: 50px;
+        padding: 30px;
+        color: #808080;
+        font-size: 20px;
+      
+}
+.johnname{
+
+    text-align: center;
+    padding-right: 160px;
+    font-weight: bold;
+    padding-bottom: 20px;
+    font-size: 30px;
+    color: black;
+}
+
+
 .swiper {
     width: 100%;
     height: 100%;
+    
   }
   
   .swiper-slide {
