--- a/src/Pages/Home/Header/header.module.css
+++ b/src/Pages/Home/Header/header.module.css
@@ -37,7 +37,10 @@ justify-content: space-between;
     font-size: 20px;
     width: 70%;
     color: #FFFFFF;
+    cursor: pointer;
+
 }
+
 .searchicon{
 
     font-size: 50px;
@@ -277,4 +280,24 @@ display: none;
     transition: all 0.4s ease-in-out;
 
 }
+}
+@media only screen and (max-width:320px) {
+    .navbarRes{
+        display: block;
+        width: 5%;
+        position: relative;
+        bottom: 50px;
+        left: 310px;
+        font-size: 25px;
+        font-weight: bold;
+        color: black;
+        transform: translateX(-100%);
+        transition: all 0.4s ease-in-out;
+    
+    }
+    .matrixlogo2{
+
+        display: block;
+        width: 55%;
+    }    
 }
