--- a/src/Pages/Home/Body/body.module.css
+++ b/src/Pages/Home/Body/body.module.css
@@ -27,7 +27,7 @@
 
 
     width: 5%;
-    background-color: gray;
+    background-color: #9ca8c4;
     height: 650px;
     position: relative;
     bottom: 250px;
@@ -54,9 +54,14 @@
     width: 1980%;
     height: 600px;
     z-index: -10;
-    background-color: #1C3E6C;
+    background-color: #3566D6;
     
 }
+.hidden{
+padding-top: 30px;
+    
+}
+
 .menuitems{
 
     display: flex;
@@ -70,23 +75,19 @@
     overflow-x: hidden;
     overflow-y: auto;
     transition-property: all;
-
-    
-
-
-    
-
 }
+
 .about{
 
     border: 1px solid black;
-    width: 25%;
+    width: 22%;
     height: 300px;
     position: relative;
     text-align: center;
     padding-top: 150px;
     bottom: 100px;
     left: 15px;
+    cursor: pointer;
 }
 .aboutlast{
 
@@ -114,7 +115,7 @@
     text-align: start;
     padding: 50px;
     font-size: 30px;
-    color: #DE5A27;
+    color: #3566D6;
     font-weight: bold;
 }
 
@@ -248,7 +249,7 @@
     height: 1000px;
     position: relative;
     bottom: 120px;
-    background-color: #DE5A27;
+    background-color: #3566D6;
     z-index: -10;
 }
 
@@ -295,7 +296,7 @@
 
     padding-left: 30px;
     font-size: 30px;
-    color: #DE5A27;
+    color: #3566D6;
     font-weight: bold;
 }
 
@@ -311,7 +312,7 @@
     border-radius: 10px;
     width: 10%;
     height: 100px;
-    background-color: #DE5A27;
+    background-color: #3566D6;
 
 
 }
@@ -322,7 +323,7 @@
 
     width: 10%;
     height: 100px;
-    background-color: #DE5A27;
+    background-color: #3566D6;
 
 }
 
@@ -332,7 +333,7 @@
 
     width: 10%;
     height: 100px;
-    background-color: #DE5A27;
+    background-color: #3566D6;
 
 }
 
@@ -376,10 +377,7 @@
     font-weight: bold;
 }
 
-.projecthead {
 
-    padding-top: 100px;
-}
 
 .projectsection {
 
@@ -398,7 +396,7 @@
     padding: 19px;
     font-size: 30px;
     font-weight: bold;
-    color: #DE5A27;
+    color: #3566D6;
 }
 
 .projectpara {
@@ -441,27 +439,27 @@
 
 .projectcart1:hover {
 
-    background-color: #E86129;
+    background-color: #3566D6;
 }
 
 .projectcart2:hover {
 
-    background-color: #E86129;
+    background-color: #3566D6;
 }
 
 .projectcart3:hover {
 
-    background-color: #E86129;
+    background-color: #3566D6;
 }
 
 .projectcart4:hover {
 
-    background-color: #E86129;
+    background-color: #3566D6;
 }
 
 .projectcart5:hover {
 
-    background-color: #E86129;
+    background-color:#3566D6 ;
 }
 
 .project1img {
@@ -607,7 +605,7 @@
     padding: 15px;
     font-weight: bold;
     font-size: 40px;
-    color: #DE5A27;
+    color: #3566D6;
 }
 
 .benifithead {
@@ -694,7 +692,7 @@
     bottom: 850px;
     font-size: 30px;
     font-weight: bold;
-    color: #DE5A27;
+    color: #3566D6;
 
 }
 
@@ -829,9 +827,9 @@
     border: 1px solid black;
     width: 75%;
     height: 350px;
-    background-color: #DE5A27;
+    background-color: #3566D6;
     position: relative;
-    bottom: 600px;
+    bottom: 730px;
     z-index: -10;
 
 }
@@ -872,7 +870,7 @@
 .jobbutton:hover {
 
     background-color: #F0F2F4;
-    color: #DE5A27;
+    color: #3566D6;
 }
 
 .challengearrow {
@@ -883,12 +881,11 @@
 
 .newslettersection {
 
-    border: 1px solid black;
     width: 99%;
     height: 400px;
-    background-color: #808080;
+    background-color: black;
     position: relative;
-    bottom: 600px;
+    bottom: 730px;
     z-index: -10;
 }
 
@@ -943,7 +940,7 @@
     padding-left: 730px;
     position: relative;
     width: 45%;
-    bottom: 520px;
+    bottom: 560px;
 }
 .footersection{
 
@@ -959,7 +956,7 @@
     font-size: 40px;
     font-weight: bold;
     padding: 30px;
-    color: #DE5A27;
+    color: #3566D6;
 }
 .footerlogo{
 
@@ -982,7 +979,7 @@
   bottom: 550px;
   display: flex;
   font-weight:bold;
-  color: #DE5A27;
+  color: #3566D6;
   justify-content: space-around;  
 }
 .footerul1{
@@ -1047,7 +1044,7 @@ left: 90px;
 }
 .facebook:hover{
 
-    color: #DE5A27;
+    color: #3566D6;
 }
 .twitter{
 
@@ -1055,7 +1052,7 @@ left: 90px;
 }
 .twitter:hover{
 
-    color: #DE5A27;
+    color: #3566D6;
 }
 .instagram{
 
@@ -1063,7 +1060,7 @@ left: 90px;
 }
 .instagram:hover{
 
-    color: #DE5A27;
+    color: #3566D6;
 }
 .linkedin{
 
@@ -1071,7 +1068,7 @@ left: 90px;
 }
 .linkedin:hover{
 
-    color: #DE5A27;
+    color: #3566D6;
 }
 .copyright{
 
@@ -1314,18 +1311,25 @@ left: 90px;
  .olivename{
 
     width: 85%;
-    padding-left: 120px;
+    padding-left: 70px;
+ }
+ .oliveimg{
+position: relative;
+left: 350px;
  }
  .leoname{
 
     width: 85%;
-    padding-left: 120px;
-
+    padding-left: 70px;
+ }
+ .leoimg{
+    position: relative;
+    left: 350px;
  }
  .johnname{
 
     width: 70%;
-    padding-left: 160px;
+    padding-left: 180px;
  } 
 }
 
@@ -1618,7 +1622,8 @@ left: 90px;
      }
  .footersub{
 
-    padding-top: 65px;
+    position: relative;
+    bottom: 1280px;
  }
  .socialmedia{
 
@@ -1635,7 +1640,42 @@ left: 90px;
  .copyright{
 
     text-align: center;
- }     
+ }
+.follow{
+    padding-right: 20px;
+    font-size: 20px;
+    color: #DE5A27;
+}
+.joinussection{
+
+    position: relative;
+    bottom: 1350px;
+}
+.newslettersection{
+
+    position: relative;
+    bottom: 1350px;
+}
+.footersection{
+
+    position: relative;
+    bottom: 1020px;
+}
+.footerinformation{
+
+    position: relative;
+    bottom: 1200px;
+}
+.lines{
+
+    position: relative;
+    bottom: 1200px;
+}
+.socialmedia{
+
+    position: relative;
+    bottom: 1000px;
+}          
 }
 
 @media only screen and (max-width:425px) {
@@ -1896,9 +1936,10 @@ left: 90px;
     display: none;
  }
 .footerlogo{
-   width: 40%;
+   width: 20%;
    position: relative;
-   left: 60px;
+   bottom: 210px;
+   
        
 }
 .footerpara{
@@ -1908,13 +1949,23 @@ left: 90px;
 }
 .footersub{
 
-    padding-top: 50px;
+    position: relative;bottom: 650px;
 }
 .lines{
 
     width: 90%;
     position: relative;
-    left: 40px;
+    left: 20px;
+}
+.newslettersection{
+
+    position: relative;
+    bottom: 700px;
+}
+.joinussection{
+
+    position: relative;
+    bottom: 700px;
 }
 .footerul1{
 
@@ -1936,9 +1987,20 @@ left: 90px;
 }
 .footerinformation{
 
-    position: relative;
-    left: 50px;
+position: relative;
+bottom: 500px;    
 }
+.lines{
+
+    position: relative;
+    bottom: 500px;
+}
+.footersection{
+
+    position: relative;
+    bottom: 400px;
+}
+
 .socialmedia{
 
     display: flex;
@@ -1950,6 +2012,9 @@ left: 90px;
 
     padding-top: 70px;
     display: flex;
+    position: relative;
+    left: 50px;
+    top: 30px;
     text-align: center;
 }
 .copyright{
@@ -2015,6 +2080,11 @@ left: 90px;
     
         display: none;
      }
+.footerinformation{
+
+    position: relative;
+    left: 10px;
+}
             
 }
 
@@ -2177,5 +2247,32 @@ bottom: 28px;
     font-size: 20px;
     color: #E86129;
     padding-right: 30px;
-}                                       
+}
+.footerinformation{
+
+    display: flex;
+    flex-direction: column;
+}
+.footerlogo{
+
+    width: 40%;
+    position: relative;
+    bottom: 240px;
+    left: 50px;
+} 
+.footerul1{
+
+    width: 80%;
+}
+.footerul2{
+
+    width: 85%;
+}
+.footerul3{
+
+    width: 78%;
+}
+.medialinks{
+    
+}                                                                
 }
