--- a/src/Pages/Home/Header/header.module.css
+++ b/src/Pages/Home/Header/header.module.css
@@ -47,7 +47,8 @@ justify-content: space-between;
     position: relative;
     left: 150px;
     bottom: 80px;
-    color: #FFFFFF;
+    color:#3566D6;
+    cursor: pointer;
 
 }
 .searchmenu{
@@ -170,7 +171,7 @@ justify-content: space-between;
     width: 5%;
     position: relative;
     bottom: 60px;
-    left: 680px;
+    left: 760px;
     font-size: 25px;
     font-weight: bold;
     color: black;
@@ -280,6 +281,11 @@ display: none;
     transition: all 0.4s ease-in-out;
 
 }
+.hiddenmenu{
+
+    font-size: 10px;
+}
+
 }
 @media only screen and (max-width:320px) {
     .navbarRes{
